--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding: 0;
+  padding: 0 30px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,4 +11,61 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.arrayElement
+{
+  display: inline-block;
+  border: 5px solid transparent;
+  margin: 5px;
+  padding: 3px 5px;
+  font-style: normal;
+  line-height: 1em;
+  transition: border-color .3s ease-in;
+  position: relative;
+}
+
+.arrayElement.arrowRight:after,
+.arrayElement.arrowLeft:after
+{
+  content: '→';
+  position: absolute;
+  top: -100%;
+  left: 0;
+}
+.arrayElement.arrowRight:after
+{
+  content: '→';
+}
+
+.arrayElement.arrowLeft:after
+{
+  content: '←';
+}
+
+.A,
+.B
+{
+  border-style: dashed;
+}
+
+.A
+{
+  border-color: red;
+}
+
+.B
+{
+  border-color: gray;
+}
+
+.operandA
+{
+  color: red;
+  position: relative;
+}
+
+.operandB
+{
+  color: gray;
 }
